fixed page stretching from project title home page and search page

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -175,6 +175,8 @@
     font-size: 1.8rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    max-width: 41rem;
+    max-height: 4rem;
 }
 
 .feature-description {
